Eclipse1/SalesforceCI/ Enterprise/objects/TYS_TrainingCourse__c.object
<CustomObject>
    <description>Train Your Salesteam - An training course.</description>
    <fields>
        <fullName>AC_Folder_ID__c</fullName>
        <description>ID of folder this course resides in.</description>
        <label>Folder_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AC_ID__c</fullName>
        <description>The ID unique to the content source.</description>
        <externalId>true</externalId>
        <label>Source_ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AC_URL__c</fullName>
        <description>URL to content on source site.</description>
        <externalId>true</externalId>
        <label>Course URL</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <description>For Categories, the color of the label.</description>
        <label>Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_ID__c</fullName>
        <description>Course ID field, a short code for the course.</description>
        <label>Course Shortname</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Type__c</fullName>
        <defaultValue>&quot;course&quot;</defaultValue>
        <description>&apos;course&apos;, &apos;folder&apos;</description>
        <label>Course_Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Score__c</fullName>
        <label>Max Score</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Training Course</label>
    <nameField>
        <label>Training Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>